TINY-3414: Fixed mobile background being transparent and not taking up the full width on iOS

--- a/src/skins/oxide/main/less/mobile/app/mobile-less.less
+++ b/src/skins/oxide/main/less/mobile/app/mobile-less.less
@@ -44,6 +44,13 @@
 }
 
 
+.tinymce-mobile-outer-container {
+  .tinymce-mobile-editor-socket iframe {
+    background-color: #FFF;
+    width: 100%;
+  }
+}
+
 .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized) {
   .tinymce-mobile-editor-socket {
     overflow: hidden;
